Center why-us text and prevent wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2257,6 +2257,8 @@ section,
 
 .why-us .feature-content .feature-list {
   margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
 }
 
 .why-us .feature-content .feature-list .feature-item {
@@ -2267,13 +2269,15 @@ section,
 
 .why-us .feature-content .feature-list .feature-item.feature-text-inline {
   justify-content: center;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .why-us .feature-content .feature-list .feature-item.feature-text-inline .feature-text {
   text-align: center;
 }
 
-.why-us .feature-content .feature-list .feature-item.feature-text-inline .feature-text h5 {
+.why-us .feature-content .feature-list .feature-item.feature-text-inline .feature-text .nowrap {
   white-space: nowrap;
 }
 
